Update to current git, the project is not making releases

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   libmodplug-0.8.9.0.tar.gz: 9d18572f85fdd95091befa972ee5d94139dcefde
+  master.tar.gz: 5a93bd1184bf7a4bcf4bd0780612b9690de9b50a
